--- a/DeepSpace.UAT/pom.xml
+++ b/DeepSpace.UAT/pom.xml
@@ -46,7 +46,7 @@
   </build>
   
   <dependencies>
-    <dependency>
+    <!--dependency -->
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
