--- a/DeepSpace.UAT/pom.xml
+++ b/DeepSpace.UAT/pom.xml
@@ -46,12 +46,12 @@
   </build>
   
   <dependencies>
-    <!--dependency
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>-->
+    </dependency>
 
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
